z-index fixing

--- a/src/_includes/sass/partials/global.scss
+++ b/src/_includes/sass/partials/global.scss
@@ -86,7 +86,7 @@ nav {
     align-items: center;
     top: 0;
     margin-left: 1em;
-    z-index: 1;
+    z-index: -3;
 }
 
 .desktop-hyperlink {
